--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -23,11 +23,17 @@ jobs:
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        bundler-cache: true
         ruby-version: 3.0.4
+    - name: Bundle install
+      run: |
+        gem install bundler
+        bundle install --jobs 4 --retry 3
     - name: Set up yarn
       run: |
         yarn install --pure-lockfile
+    - name: Run Rubocop
+      run: |
+        rubocop
     - name: Prepare database
       env:
         PGHOST: localhost
