--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "^3.3.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "semantic-ui-react": "^2.1.3",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
