xz - ignore previous commit, made from wrong folder :(

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ tmp/
 /tmp/*
 !/log/.keep
 !/tmp/.keep
+/tsung_logs/*/tsung_controller*
 
 # TODO Comment out this rule if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
